# azureaiproxy

./: README.md  main.py  pyproject.toml  requirements.txt  test_stream.py  ui.py
src/azureaiproxy/: __init__.py  cli.py  ui.py
tests/: test_basic.py  test_logging_args.py  test_streaming_refactor.py
tests/integration/: test_stream.py
